<resources>
    <string name="app_name">MoSho App</string>

    <string name="tab_movie">Movie</string>
    <string name="tab_tv_show">Tv Show</string>
    <string name="tab_fav">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_language_settings">setting</string>
    <string name="judul">title</string>
    <string name="tanggal_rilis">release_date</string>
    <string name="dummy_text">asdfg</string>
    <string name="genre">Genre</string>

    <string name="language">en-US</string>

    <string name="teks_favorite_tambah">one item added successfully</string>
    <string name="teks_favorite_hapus">one item successfully deleted</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Movie/Tv Show</string>

    <string name="appwidget_text">Favorite Movie &amp; Tv Show</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">empty</string>

    <string name="tv_release">Release Reminder</string>
    <string name="tv_release_info">Reminder showing the movie that released today</string>

    <string name="tv_daily">Daily Reminder</string>
    <string name="tv_daily_info">Reminder for return to app</string>

    <string name="tv_language">Change Language</string>
    <string name="tv_language_info">Change your app\'s language(English/Indonesia)</string>
    <string name="click_search_icon_to_search">Tap search icon</string>

    <string name="msg_daily_reminder">MoSho App is missing you</string>
    <string name="daily_on">Daily alarm set up</string>
    <string name="daily_off">Daily alarm off</string>

    <string name="msg_today_reminder">Release Reminder</string>
    <string name="list_today_reminder">Movies list</string>
    <string name="today_on">Release alarm set up</string>
    <string name="today_off">Release alarm off</string>

</resources>
